5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1709_3039.log
== SUBMITION (2019-05-02 11:29:54) 
-- CODE:
from math import*

x = float(input("Digite x: "))

if(x>= -1 and x< -1/2 or x>1/2 and x<=1):
	x = degrees(x)
	print(round(asin(x),2))
elif(x>=-1/2 and x<=1/2):
	x = degrees(x)
	print(round(acos(x),2))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.135506
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1709/3039/main.py", line 7, in <module>
    print(round(asin(x),2))
ValueError: math domain error

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:30:04) 
-- CODE:
from math import*

x = float(input("Digite x: "))

if(x>= -1 and x< -1/2 or x>1/2 and x<=1):
	x = degrees(x)
	print(round(asin(x),2))
elif(x>=-1/2 and x<=1/2):
	x = degrees(x)
	print(round(acos(x),2))
else:
	print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(asin(x),2))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:31:47) 
-- CODE:
from math import*

x = float(input("Digite x: "))

if(x>= -1 and x< -1/2 or x>1/2 and x<=1):
	x = degrees(x)
	print(round(asin(x),2))
elif(x>=-1/2 and x<=1/2):
	x = degrees(x)
	print(round(acos(x),2))
else:
	print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(asin(x),2))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:32:06) 
-- CODE:
from math import*

x = float(input("Digite x: "))

if(x>= -1 and x< -1/2 or x>1/2 and x<=1):
	x = degrees(x)
	print(round(asin(x),2))
elif(x>=-1/2 and x<=1/2):
	x = degrees(x)
	print(round(acos(x),2))
else:
	print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(asin(x),2))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:33:24) 
-- CODE:
from math import*

x = float(input("Digite x: "))

if(x>= -1 and x<-1/2 or x>1/2 and x<=1):
	x = degrees(x)
	print(round(asin(x),2))
elif(x>=-1/2 and x<=1/2):
	x = degrees(x)
	print(round(acos(x),2))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.143958
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1709/3039/main.py", line 7, in <module>
    print(round(asin(x),2))
ValueError: math domain error

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:33:26) 
-- CODE:
from math import*

x = float(input("Digite x: "))

if(x>= -1 and x<-1/2 or x>1/2 and x<=1):
	x = degrees(x)
	print(round(asin(x),2))
elif(x>=-1/2 and x<=1/2):
	x = degrees(x)
	print(round(acos(x),2))
else:
	print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(asin(x),2))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:35:58) 
-- CODE:
from math import*

x = float(input("Digite x: "))

if(x>= -1 and x<-1/2 or x>1/2 and x<=1):
	x = degrees(x)
	asin(x)= round(asin(x),2)
	print(asin(x))
elif(x>=-1/2 and x<=1/2):
	x = degrees(x)
	print(round(acos(x),2))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.294366
-- ERROR:
  File "/home/codebench/codes/1709/3039/main.py", line 7
    asin(x)= round(asin(x),2)
    ^
SyntaxError: can't assign to function call

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:35:58) 
-- CODE:
from math import*

x = float(input("Digite x: "))

if(x>= -1 and x<-1/2 or x>1/2 and x<=1):
	x = degrees(x)
	asin(x)= round(asin(x),2)
	print(asin(x))
elif(x>=-1/2 and x<=1/2):
	x = degrees(x)
	print(round(acos(x),2))
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 7
    asin(x)= round(asin(x),2)
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:36:34) 
-- CODE:
from math import*

x = float(input("Digite x: "))

if(x>= -1 and x<-1/2 or x>1/2 and x<=1):
	x = degrees(x)
	print(round(asin(x),2))
elif(x>=-1/2 and x<=1/2):
	x = degrees(x)
	print(round(acos(x),2))
else:
	print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(asin(x),2))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:37:16) 
-- CODE:
from math import*

x = float(input("Digite x: "))

if(x>=-1 and x<-1/2 or x>1/2 and x<=1):
	x = degrees(x)
	print(round(asin(x),2))
elif(x>=-1/2 and x<=1/2):
	x = degrees(x)
	print(round(acos(x),2))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.135794
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1709/3039/main.py", line 7, in <module>
    print(round(asin(x),2))
ValueError: math domain error

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:37:17) 
-- CODE:
from math import*

x = float(input("Digite x: "))

if(x>=-1 and x<-1/2 or x>1/2 and x<=1):
	x = degrees(x)
	print(round(asin(x),2))
elif(x>=-1/2 and x<=1/2):
	x = degrees(x)
	print(round(acos(x),2))
else:
	print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(asin(x),2))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:37:59) 
-- CODE:
from math import*

x = float(input("Digite x: "))

if(x>=-1 and x<-1/2 or x>1/2 and x<=1):
	x = degrees(x)
	print(round(asin(x),2))
elif(x>=-1/2 and x<=1/2):
	x = degrees(x)
	print(round(acos(x),2))
else:
	print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(asin(x),2))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:38:12) 
-- CODE:
from math import*

x = float(input("Digite x: "))

if(x>=-1 and x<-1/2 or x>1/2 and x<=1):
	x = degrees(x)
	print(round(asin(x),2))
elif(x>=-1/2 and x<=1/2):
	x = degrees(x)
	print(round(acos(x),2))
else:
	print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(asin(x),2))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:38:17) 
-- CODE:
from math import*

x = float(input("Digite x: "))

if(x>=-1 and x<-1/2 or x>1/2 and x<=1):
	x = degrees(x)
	print(round(asin(x),2))
elif(x>=-1/2 and x<=1/2):
	x = degrees(x)
	print(round(acos(x),2))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.141985
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1709/3039/main.py", line 7, in <module>
    print(round(asin(x),2))
ValueError: math domain error

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:38:19) 
-- CODE:
from math import*

x = float(input("Digite x: "))

if(x>=-1 and x<-1/2 or x>1/2 and x<=1):
	x = degrees(x)
	print(round(asin(x),2))
elif(x>=-1/2 and x<=1/2):
	x = degrees(x)
	print(round(acos(x),2))
else:
	print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(asin(x),2))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:38:57) 
-- CODE:
from math import*

x = float(input("Digite x: "))

if(x>=-1 and x<(-1/2) or x>(1/2) and x<=1):
	x = degrees(x)
	print(round(asin(x),2))
elif(x>=-1/2 and x<=1/2):
	x = degrees(x)
	print(round(acos(x),2))
else:
	print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(asin(x),2))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:40:11) 
-- CODE:
from math import*

x = float(input("Digite x: "))

x = degrees(x)
print(asin(x))
if(x>=-1 and x<(-1/2) or x>(1/2) and x<=1):
	x = degrees(x)
	print(round(asin(x),2))
elif(x>=-1/2 and x<=1/2):
	x = degrees(x)
	print(round(acos(x),2))
else:
	print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(asin(x))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:40:38) 
-- CODE:
from math import*

x = float(input("Digite x: "))

x = degrees(x)
print(asin(x))
if(x>=-1 and x<(-1/2) or x>(1/2) and x<=1):
	x = degrees(x)
	print(round(asin(x),2))
elif(x>=-1/2 and x<=1/2):
	x = degrees(x)
	print(round(acos(x),2))
else:
	print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(asin(x))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:41:11) 
-- CODE:
from math import*

x = float(input("Digite x: "))

x = degrees(x)
print(asin(x))
if(x>=-1 and x<(-1/2) or x>(1/2) and x<=1):
	x = degrees(x)
	print(round(asin(x),2))
elif(x>=-1/2 and x<=1/2):
	x = degrees(x)
	print(round(acos(x),2))
else:
	print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(asin(x))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:42:00) 
-- CODE:
from math import*

x = float(input("Digite x: "))

if(x>=-1 and x<(-1/2) or x>(1/2) and x<=1):
	x = degrees(x)
	print(round(asin(x),2))
elif(x>=-1/2 and x<=1/2):
	x = degrees(x)
	print(round(acos(x),2))
else:
	print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(asin(x),2))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:42:19) 
-- CODE:
from math import*

x = float(input("Digite x: "))

if(x>=-1 and x<(-1/2) or x>(1/2) and x<=1):
	x = degrees(x)
	print(round(asin(x),2))
elif(x>=-1/2 and x<=1/2):
	x = degrees(x)
	print(round(acos(x),2))
else:
	print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(asin(x),2))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:44:46) 
-- CODE:
from math import*

x = float(input("Digite x: "))

if(x>=-1 and x<(-1/2) or x>(1/2) and x<=1):
	x = degrees(x)
	print(round(asin(x),2))
elif(x>=-1/2 and x<=1/2):
	x = degrees(x)
	print(round(acos(x),2))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.247009
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1709/3039/main.py", line 7, in <module>
    print(round(asin(x),2))
ValueError: math domain error

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:44:47) 
-- CODE:
from math import*

x = float(input("Digite x: "))

if(x>=-1 and x<(-1/2) or x>(1/2) and x<=1):
	x = degrees(x)
	print(round(asin(x),2))
elif(x>=-1/2 and x<=1/2):
	x = degrees(x)
	print(round(acos(x),2))
else:
	print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(asin(x),2))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:44:55) 
-- CODE:
from math import*

x = float(input("Digite x: "))

if(x>=-1 and x<(-1/2) or x>(1/2) and x<=1):
	x = degrees(x)
	print(round(asin(x),2))
elif(x>=-1/2 and x<=1/2):
	x = degrees(x)
	print(round(acos(x),2))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.167955
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1709/3039/main.py", line 7, in <module>
    print(round(asin(x),2))
ValueError: math domain error

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:44:56) 
-- CODE:
from math import*

x = float(input("Digite x: "))

if(x>=-1 and x<(-1/2) or x>(1/2) and x<=1):
	x = degrees(x)
	print(round(asin(x),2))
elif(x>=-1/2 and x<=1/2):
	x = degrees(x)
	print(round(acos(x),2))
else:
	print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(asin(x),2))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:46:56) 
-- CODE:
from math import*

x = float(input("Digite x: "))

if(x>=-1 and x<(-1/2) or x>(1/2) and x<=1):
	x = degrees(x)
	print(round(asin(x),2))
elif(x>=-1/2 and x<=1/2):
	
	print(round(acos(x),2))
else:
	print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(asin(x),2))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:47:26) 
-- CODE:
from math import*

x = float(input("Digite x: "))

if(x>=-1 and x<(-1/2) or x>(1/2) and x<=1):
	x = degrees(x)
	print(round(asin(x),2))
elif(x>=-1/2 and x<=1/2):
	x = degrees(x)
	print(round(acos(x),2))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.182363
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1709/3039/main.py", line 7, in <module>
    print(round(asin(x),2))
ValueError: math domain error

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:47:27) 
-- CODE:
from math import*

x = float(input("Digite x: "))

if(x>=-1 and x<(-1/2) or x>(1/2) and x<=1):
	x = degrees(x)
	print(round(asin(x),2))
elif(x>=-1/2 and x<=1/2):
	x = degrees(x)
	print(round(acos(x),2))
else:
	print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(asin(x),2))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:47:51) 
-- CODE:
from math import*

x = float(input("Digite x: "))

if(x>=-1 and x<(-1/2) or x>(1/2) and x<=1):
	x = degrees(x)
	print(round(asin(x),2))
elif(x>=-1/2 and x<=1/2):
	x = degrees(x)
	print(round(acos(x),2))
else:
	print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(asin(x),2))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:48:00) 
-- CODE:
from math import*

x = float(input("Digite x: "))

if(x>=-1 and x<(-1/2) or x>(1/2) and x<=1):
	x = degrees(x)
	print(round(asin(x),2))
elif(x>=-1/2 and x<=1/2):
	x = degrees(x)
	print(round(acos(x),2))
else:
	print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(asin(x),2))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:49:18) 
-- CODE:
from math import*

x = float(input("Digite x: "))

if(x>=-1 and x<(-1/2) or x>(1/2) and x<=1):
	
	print(round(asin(degrees(x)),2))
elif(x>=-1/2 and x<=1/2):
	
	print(round(acos(degrees(x)),2))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.171452
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1709/3039/main.py", line 7, in <module>
    print(round(asin(degrees(x)),2))
ValueError: math domain error

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:49:19) 
-- CODE:
from math import*

x = float(input("Digite x: "))

if(x>=-1 and x<(-1/2) or x>(1/2) and x<=1):
	
	print(round(asin(degrees(x)),2))
elif(x>=-1/2 and x<=1/2):
	
	print(round(acos(degrees(x)),2))
else:
	print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(asin(degrees(x)),2))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:51:59) 
-- CODE:
from math import*

x = float(input("Digite x: "))

if(x>=-1 and x<(-1/2) or x>(1/2) and x<=1):
	print(round(degrees(asin(x)),2))
elif(x>=-1/2 and x<=1/2):
	
	print(round(degrees(acos(x)),2))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.155906
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-81.89
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
102.12
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
